# Simple-Filter

./: .gitignore  CMakeLists.txt  README.md  compose.yml
.github/: .dockerignore  dependabot.yml
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  default.yml  request.yml
.github/config/: labels.yml
.github/workflows/: build.yml  sync-labels.yml
CI/: Dockerfile.Linux  Dockerfile.Windows  build.bat  build.sh
src/: BandRejectFilter.cpp  BandRejectFilter.h  BandpassFilter.cpp  BandpassFilter.h  BiquadCoeff.cpp  BiquadCoeff.h  BiquadFilter.cpp  BiquadFilter.h  BiquadFilterChain.h  CMakeLists.txt  Chainable.cpp  Chainable.h  Editor.cpp  Editor.h  EffectChain.h  Filter.cpp  Filter.h  FilterChain.cpp  FilterChain.h  GenericChain.h  IRFilter.cpp  IRFilter.h  ParamIDs.h  ParameterMappings.h  Processor.cpp  Processor.h  RingBuffer.cpp  RingBuffer.h  TFFilter.cpp  TFFilter.h  TFFilterCoeff.h
src/EditorComponents/: BandwidthComponent.cpp  BandwidthComponent.h  BottomArea.cpp  BottomArea.h  CenterFreqComponent.h  CustomLabelLookAndFeel.cpp  CustomLabelLookAndFeel.h  CustomLookAndFeel.cpp  CustomLookAndFeel.h  CutoffFreqComponent.h  LowerRow.cpp  LowerRow.h  SteepnessComponent.h  UpperRow.cpp  UpperRow.h
src/Resources/: SliderImg.h
src/util/: BinaryConversion.cpp  BinaryConversion.h
test/: CMakeLists.txt  TestBiquadCoeff.cpp  TestBiquadFilter.cpp  TestEditor.cpp  TestFilter.cpp  TestFilterChain.cpp  TestRingBuffer.cpp  TestTFFilter.cpp
